--- a/index.html
+++ b/index.html
@@ -13,10 +13,9 @@
   </head>
 
 <!--- Page --->
-  
+<center>
   <h1> Bienvenue sur Mulatge </h1>
-  <h3> Awesome Scroll </h3>
+  <a href="https://n0ub4x.github.io/Multage/Awesome%20Scroll/"><h3> Awesome Scroll </h3></h3>
   
-  </html>
-  </head>
-  
+</html>
+</head>
