--- a/index.html
+++ b/index.html
@@ -14,8 +14,9 @@
 
 <!--- Page --->
 <center>
-  <h1> Bienvenue sur Mulatge </h1>
-  <a href="https://n0ub4x.github.io/Multage/Awesome%20Scroll/"><h3> Awesome Scroll </h3></h3>
-  
+  <p style="color:white"><h1> Bienvenue sur Mulatge </h1>
+  <a href="https://n0ub4x.github.io/Multage/Awesome%20Scroll/"><p style="color:white"><h3> Awesome Scroll </h3></h3>
+
+  </p>
 </html>
 </head>
