--- a/index.html
+++ b/index.html
@@ -15,7 +15,9 @@
 <!--- Page --->
 <center>
   <h1><p style="color:white"> Bienvenue sur Mulatge </h1>
-  <a href="https://n0ub4x.github.io/Multage/Awesome%20Scroll/"><h3> Awesome Scroll </h3></h3>
+  <br></br>
+  <a href="https://n0ub4x.github.io/Multage/Awesome%20Scroll/"><h3> Awesome Scroll </h3></a>
+  <a href="https://n0ub4x.github.io/Multage/WiiU/"><h3> Wii U </h3></a>
 
   </p>
 </html>
