--- a/WiiU/index.html
+++ b/WiiU/index.html
@@ -2,11 +2,11 @@
 
 <head>
     <meta charset="UTF-8">
-    <title>N0ub4x - Wii U</title>
+    <title>Wii U WebHack</title>
     <link rel="stylesheet" type="text/css" href="Fichiers/CSS/styles.css" />
     <style> 
 body {
-  background-image: url("https://n0ub4x.github.io/WiiU/Images/Fond.png");
+  background-image: url("Images/Fond.png");
   background-color: #000000;
 }
 </style>
@@ -14,7 +14,7 @@ body {
 
 <body>
     <br>
-    <center><img src="Images/Logo.png" alt="Logo"></center>1
+    <center><img src="Images/Logo.png" alt="Logo"></center>
     <center><a href="Pages/55X.html" class="myButton">5.5.X Exploit</a> <a href="Pages/551.html" class="myButton">5.5.1 Exploit</a> <a href="Pages/540.html" class="myButton">5.4.0 Exploit</a> <a href="Pages/532.html" class="myButton">5.3.2 Exploit</a></center>
     <div style="height:4px;font-size:1px;">&nbsp;</div>
     <br>
