--- a/WiiU/Pages/55X.html
+++ b/WiiU/Pages/55X.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <title>Wii U WebHack</title>
-    <link rel="icon" href="https://n0ub4x.github.io/Multage/WiiU/Images/Icon.png">
+    <link rel="icon" href="https://n0ub4x.github.io/Images/Icon.png">
     <style> 
 body {
   background-image: url("https://n0ub4x.github.io/Multage/WiiU/Images/Fond.png");
