--- a/WiiU/Pages/532.html
+++ b/WiiU/Pages/532.html
@@ -6,11 +6,11 @@
     <link rel="icon" href="https://n0ub4x.github.io/Images/Icon.png">
     <style> 
 body {
-  background-image: url("https://n0ub4x.github.io/WiiU/Images/Fond.png");
+  background-image: url("https://n0ub4x.github.io/Multage/WiiU/Images/Fond.png");
   background-color: #000000;
 }
 </style>
-    <link rel="stylesheet" type="text/css" href="https://n0ub4x.github.io//WiiU/Fichiers/CSS/styles.css" />
+    <link rel="stylesheet" type="text/css" href="https://n0ub4x.github.io/Multage/WiiU/Fichiers/CSS/styles.css" />
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/@fortawesome/fontawesome-free@5.15.4/css/fontawesome.min.css">
     <script language="javascript">
         function changeText(idElement) {
@@ -21,7 +21,7 @@ body {
 
 <body>
     <br>
-    <center><img src="https://n0ub4x.github.io//WiiU/Images/5.3.2%20Logo.png" alt="5.5.X Logo"></center>
+    <center><img src="https://n0ub4x.github.io/Multage/WiiU/Images/5.3.2%20Logo.png" alt="5.3.2 Logo"></center>
     <br>
     <center><a href="payload532.html" id="element1" class="myButton" onClick="javascript:changeText(1)">Lancer HBL !</a></center>
 </body>
