--- a/WiiU/Pages/532.html
+++ b/WiiU/Pages/532.html
@@ -2,7 +2,7 @@
 
 <head>
     <meta charset="UTF-8">
-    <title>N0ub4x - Wii U - 5.3.2</title>
+    <title>Wii U WebHack</title>
     <link rel="icon" href="https://n0ub4x.github.io/Images/Icon.png">
     <style> 
 body {
