--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 <head>
 
 <!--- Titre --->
-  <title> Multage - Multiple Pages </title>
+  <title> Multage - Pages Multiple </title>
 
 <!--- Couleur Arrière-Plan --->
   <body style="background-color:black">
