--- a/index.html
+++ b/index.html
@@ -5,8 +5,9 @@
 <html>
 <head>
 
-<!--- Titre --->
+<!--- Titre + Icône --->
   <title> Multage - Pages Multiple </title>
+  <link rel="icon" href="https://n0ub4x.github.io/Images/Twity.png">
 
 <!--- Couleur Arrière-Plan --->
   <body style="background-color:black">
