--- a/TOPhone/Samsung.html
+++ b/TOPhone/Samsung.html
@@ -44,7 +44,7 @@
 			<a class="grid-item projets" target="_blank" href="https://boutique.orange.fr/mobile/details/samsung-galaxy-s22-noir-128go-v2">
                 <img src="Images/Samsung/Galaxy/S/22.png">
                 <div class="grid-title">Samsung Galaxy S22</div>
-                <div class="grid-desc"> €</div>
+                <div class="grid-desc">229 €</div>
             </a>
             <a class="grid-item projets" target="_blank" href="https://boutique.orange.fr/mobile/details/samsung-galaxy-s21-fe-5g-noir-128go">
                 <img src="Images/Samsung/Galaxy/S/21 FE.png">
