--- a/Inutile/WiiU/Pages/540.html
+++ b/Inutile/WiiU/Pages/540.html
@@ -3,14 +3,14 @@
 <head>
     <meta charset="UTF-8">
     <title>Wii U WebHack</title>
-    <link rel="icon" href="https://n0ub4x.github.io/Images/Icon.png">
+    <link rel="icon" href="https://n0ub4x.github.io/Images/Twity.png">
     <style> 
 body {
-  background-image: url("https://n0ub4x.github.io/Multage/WiiU/Images/Fond.png");
+  background-image: url("https://n0ub4x.github.io/Multage/Inutile/WiiU/Images/Fond.png");
   background-color: #000000;
 }
 </style>
-    <link rel="stylesheet" type="text/css" href="https://n0ub4x.github.io/Multage/WiiU/Fichiers/CSS/styles.css" />
+    <link rel="stylesheet" type="text/css" href="https://n0ub4x.github.io/Multage/Inutile/WiiU/Fichiers/CSS/styles.css" />
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/@fortawesome/fontawesome-free@5.15.4/css/fontawesome.min.css">
     <script language="javascript">
         function changeText(idElement) {
@@ -21,7 +21,7 @@ body {
 
 <body>
     <br>
-    <center><img src="https://n0ub4x.github.io/Multage/WiiU/Images/5.4.0%20Logo.png" alt="5.4.0 Logo"></center>
+    <center><img src="https://n0ub4x.github.io/Multage/Inutile/WiiU/Images/5.4.0%20Logo.png" alt="5.4.0 Logo"></center>
     <br>
     <center><a href="540.mp4" id="element1" class="myButton" onClick="javascript:changeText(1)">Lancer HBL !</a></center>
 </body>
